# agde

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: agde-io.yml  agde-tokio.yml  agde.yml  dach.yml  den.yml
agde/: Cargo.toml  README.md
agde-io/: Cargo.toml
agde-io/src/: lib.rs
agde-tokio/: Cargo.toml  README.md
agde-tokio/src/: lib.rs  main.rs  native.rs  periodic.rs
agde-tokio/test-ws-server/: index.js  package-lock.json  package.json
agde-web/: Cargo.toml  README.md
agde-web.js/: README.md  index.html  main.js  main.mjs  package-lock.json  package.json  server.js  worker.js
agde-web/src/: lib.rs
agde/src/: diff.rs  event.rs  fast_forward.rs  hash_check.rs  lib.rs  log.rs  resource.rs  section.rs  sync.rs  utils.rs
agde/tests/: lib.rs
dach/: CHANGELOG.md  Cargo.toml  README.md
dach/src/: lib.rs  parallel.rs
den/: '  Cargo.toml  README.md
den/src/: lib.rs  parallel.rs
den/tests/: lib.rs
src/: lib.rs  log.rs
test-ws-server/: index.js  package.json
