[package]
name = "sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-alpha.1", features = ["serde"] }
semver = { version = "^1", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
rand = "^0.8"
