[package]
name = "agde-tokio"
version = "0.1.0" # Also update `crate::VERSION`.
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "Client and server for generic data syncronization - using tokio."
readme = "README.md"
homepage = "https://agde.dev/"
repository = "https://github.com/Icelk/agde/"
license = "LGPL-3.0-or-later"
# keywords = ["sync", "rsync", "live-share", "binary sync"]
# categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "agde-tokio"
path = "src/bin/main.rs"

[dependencies]
agde = { path = "../agde" }

bincode = { version = "=2.0.0-rc.1", features = ["serde"] }
ctrlc = "3.2"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
lazy_static = "1.4.0"
log = "0.4"
notify = "5.0.0-pre.15"
serde = { version = "^1", features = ["derive"] }
tokio = { version = "=1.17", features = ["macros", "rt-multi-thread", "parking_lot", "time", "sync", "fs"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
walkdir = "2"
