[package]
name = "agde-web"
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "Client and server for generic data syncronization - using tokio."
readme = "README.md"
homepage = "https://agde.dev/"
repository = "https://github.com/Icelk/agde/"
license = "LGPL-3.0-or-later"
# keywords = ["sync", "rsync", "live-share", "binary sync"]
# categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
agde = { path = "../agde" }
agde-io = { path = "../agde-io" }

base64 = "0.13"
bincode = { version = "=2.0.0-rc.1", features = ["serde"] }
console_error_panic_hook = "0.1.7"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
gloo-net = "0.2"
gloo-timers = { version = "0.2", features = ["futures"] }
js-sys = "0.3"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
snap = "1.0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
