[package]
name = "agde"
# Also change this in the VERSION constant of `src/lib.rs`
version = "0.1.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "A general decentralized sync library supporting text and binary."
readme = "README.md"
# homepage = "https://icelk.dev/agde/"
repository = "https://github.com/Icelk/agde/"
license = "LGPL-3.0-or-later"
keywords = ["sync", "rsync", "live-share", "binary sync"]
categories = ["algorithms"]

[dependencies]
base64 = "^0.13"
bincode = { version = "2.0.0-alpha.1", features = ["serde"] }
den = { path = "../den" }
semver = { version = "^1", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
sha3 = "^0.9"
twox-hash = "^1.6"
rand = "^0.8"
