[package]
name = "den"
version = "0.2.1"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "A general delta encoded network difference algorithm."
readme = "README.md"
homepage = "https://agde.dev/den/"
repository = "https://github.com/Icelk/agde/"
license = "LGPL-3.0-or-later"
keywords = ["diff", "rdiff", "rsync"]
categories = ["algorithms"]

[dependencies]
serde = { version = "^1", features = ["derive"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3", "xxh64"] }
cyclic-poly-23 = "0.3"
adler32 = "1.2"
