[package]
name = "dach"
version = "0.3.0"
authors = ["Icelk <main@icelk.dev>"]
edition = "2021"
rust-version = "1.56"
description = "A general delta encoded network difference algorithm."
readme = "README.md"
#homepage = "https://agde.dev/dach/"
homepage = "https://github.com/Icelk/agde/tree/main/dach/"
repository = "https://github.com/Icelk/agde/"
license = "LGPL-3.0-or-later"
keywords = ["diff", "rdiff", "rsync"]
categories = ["algorithms"]

[dependencies]
adler32 = "1.2"
cyclic-poly-23 = "0.3"
serde = { version = "1", features = ["derive"], optional = true }
rustc-hash = "1.1"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
